integrated twitch helix api

--- a/apps/who/templates/who/index.html
+++ b/apps/who/templates/who/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<form name="search-box" action="{% url 'submit-view' %}" method="get">
+<form name="search-box" action="{% url 'verify' %}" method="get">
     <input name="q" type="text" placeholder="Twitch Username">
     <input name="search-box-button" type="submit" value="Search">
 </form>
